# bet

./: .gitignore  README.md  docker-compose.yaml
accounts/: .env  Dockerfile  config.py  dependencies.py  logger.py  main.py  models.py  pyproject.toml  routers.py  schemas.py  tortoise_conf.py  utils.py
accounts/migrations/models/: 10_20240105160021_None.py  2_20221002114628_None.sql
accounts/resources/: broker.py
accounts/routers/: auth.py
accounts/schemas/: auth.py
bet_maker/: .env  Dockerfile  config.py  main.py  models.py  pyproject.toml  routers.py  tortoise_conf.py
bet_maker/app/: models.py  routers.py  schemas.py  services.py
bet_maker/app/dependencies/: auth.py
bet_maker/app/resources/: broker.py
bet_maker/core/: config.py  main.py
bet_maker/migrations/models/: 13_20240127182138_None.py  1_20221002114303_None.sql
event_deadline_checker/: pyproject.toml  tortoise_conf.py
event_deadline_checker/app/: main.py  models.py  services.py
event_deadline_checker/core/: config.py
event_deadline_checker/resources/: broker.py
line_provider/: .env  Dockerfile  config.py  main.py  models.py  pyproject.toml  schemas.py  tortoise_conf.py
line_provider/migrations/models/: 18_20240114134934_None.py  1_20221002114021_None.sql
line_provider/routers/: event_routers.py
payment/: pyproject.toml  tortoise_conf.py
payment/app/: dependecies.py  models.py  routers.py  schemas.py
payment/core/: config.py  main.py
payment/migrations/models/: 12_20240111184427_None.py
