[tool.poetry]
name = "new_project"
version = "0.1.0"
description = ""
authors = ["Артём Поташов <artem.potashov@bk.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
tortoise-orm = "^0.19.2"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"


[tool.aerich]
tortoise_orm = "tortoise_conf.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
